--- a/css/main.css
+++ b/css/main.css
@@ -171,33 +171,26 @@
   
   /* img container */
   
-  
   .img-container {
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fill, minMax(150px, 150px));
   }
   
-  
-  .img-container img{
+  .img-container img {
     cursor: pointer;
   }
   
-  
-  
-  
   /* editor-container */
-  
   
   .editor-container {
     display: flex;
     justify-content: center;
   }
   
-  
   .btn-gr1 .fa {
     background-color: white;
-    box-shadow: 6px 5px 16px 0px #948e8e;
+    box-shadow: 5px 5px 16px 0px #948e8e;
     cursor: pointer;
     width: 50px;
     height: 50px;
@@ -209,6 +202,14 @@
     cursor: pointer;
     width: 50px;
     height: 50px;
+  }
+  
+  .file-input {
+    background-color: white;
+    border: 1px solid;
+    box-shadow: 5px 5px 16px 0px #948e8e;
+    cursor: pointer;
+    display: none;
   }
   
   .editor-container button {
@@ -231,10 +232,15 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(4, 1fr) 100px 1fr;
     gap: 15px;
-  } 
+  }
   
   .userTxt {
-    grid-column: 1/6;
+    grid-column: 1/5;
+    grid-row: 1/2;
+  }
+  
+  .fa-upload {
+    grid-column: 5/6;
     grid-row: 1/2;
   }
   
@@ -243,12 +249,11 @@
     grid-column: 1/6;
     grid-row: 2/3;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr ;
+    grid-template-rows: 1fr;
     padding: 5px;
-    
   }
   
-  .btn-gr2{
+  .btn-gr2 {
     display: grid;
     grid-column: 1/6;
     grid-row: 3/5;
@@ -258,52 +263,64 @@
     gap: 5px;
   }
   
-  
-  .fonts-selection{
+  .fonts-selection {
     grid-column: 1/4;
     grid-row: 4/5;
-    
   }
   
-  .fa-strikethrough{
+  .fa-strikethrough {
     grid-column: 4/5;
     grid-row: 4/5;
-    
   }
   
-  .palette{
+  .palette {
     grid-column: 5/6;
     grid-row: 4/5;
-    
   }
   
-  .stikers-container{
+  .stikers-container {
     display: grid;
     grid-column: 1/6;
     grid-row: 5/6;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 30px ;
+    grid-template-rows: 30px;
     border: 1px black solid;
   }
   
-  .save-btns{
+  .save-btns {
     display: grid;
     grid-column: 1/6;
     grid-row: 6/7;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr ;
+    grid-template-rows: 1fr;
     padding: 5px;
-    gap: 5px; 
-  } 
-  
-  .save-btns button{
-    width: 140px;
-    height: 50px;
-    padding: 5px; 
+    gap: 5px;
   }
   
+  .save-btns button {
+    width: 140px;
+    height: 50px;
+    padding: 5px;
+  }
   
+  .share-container a {
+    text-decoration: none;
+    cursor: pointer;
+    color: black;
+  }
   
+  .a-btn {
+    text-decoration: none;
+    width: 140px;
+    height: 50px;
+    padding: 5px;
+    cursor: pointer;
+    border: black 1px solid;
+    color: black;
+    box-shadow: 5px 5px 16px 0px #948e8e;
+    text-align: center;
+    padding-top: 15px;
+  }
   
   /* footer */
   
@@ -314,11 +331,23 @@
   .footer {
     padding-top: 10px;
     width: auto;
-    height: 150px;
+    height: 200px;
     background-color: orange;
     font-size: 20px;
     text-align: center;
   }
+  
+  /* contact-html */
+  
+  .by-socials .fa{
+    display: flex;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    
+  }
+  
+  
   
   /* HELPERS */
   
@@ -328,9 +357,10 @@
     list-style-type: none;
   }
   
-  .hidden{
+  .hidden {
     display: none;
   }
+  
   /* flex */
   
   .flex {
