--- a/css/main.css
+++ b/css/main.css
@@ -7,34 +7,44 @@
     padding: 0;
     font-size: 1rem;
     color: white;
-    /* overflow-y: hidden; */
+    overflow-x: hidden;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
   img {
     width: 100%;
   }
   
+  canvas {
+    width: 100%;
+  }
+  
   .main-layout {
-    margin-left: 35px;
+    margin-right: 35px;
     margin-left: 35px;
   }
   
-  /* My navbar */
+  body.rtl {
+    direction: rtl;
+  }
   
+  /* My navbar */
   /* full nav-bar */
   
   .logo {
     font-size: 15px;
-    padding-left: 10px;
+    padding-inline-start: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   
   .sub-heading {
-    padding-left: 30px;
+    line-height: 0px;
+    padding-inline-start: 40px;
   }
   
   .navbar {
     overflow: hidden;
-    background-color: orange;
+    background-color: rgb(255, 166, 0);
   }
   
   .navbar a {
@@ -43,6 +53,7 @@
     padding: 14px 16px;
     text-decoration: none;
     color: white;
+    cursor: pointer;
   }
   
   a:is(:link, :active, :visited).active {
@@ -60,7 +71,7 @@
   .dropdown {
     float: right;
     overflow: hidden;
-    padding-right: 30px;
+    padding-inline-end: 30px;
     cursor: pointer;
     text-align: center;
   }
@@ -82,13 +93,18 @@
     cursor: pointer;
   }
   
+  .creator-name{
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  
   .dropdown:hover .dropdown-content {
     display: block;
     background-color: wheat;
   }
   
   .dropdown .fa {
-    padding-left: 5px;
+    padding-inline-end: 5px;
   }
   
   /* hamburger nav-bar */
@@ -100,16 +116,242 @@
     display: none;
   }
   
+  .about-container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  
+  .a-btn {
+    text-decoration: none;
+    margin-top: 30px;
+    width: 100px;
+    height: 30px;
+    padding: 5px;
+    cursor: pointer;
+    color: black;
+    box-shadow: 5px 5px 16px 0px #948e8e;
+    text-align: center;
+    /* padding-top: 15px; */
+    margin-left: 20px;
+    border-radius: 5px;
+  
+  }
+  
+  @media (max-width: 820px) {
+    .editors {
+      width: 300px;
+      height: 300px;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      display: grid;
+      align-items: center;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(4, 1fr) 1fr 1fr;
+      margin-right: 35px;
+      margin-top: 5px;
+    }
+    .btn-gr1 {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 2/3;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr;
+      padding: 5px;
+    }
+    a:is(:link, :active, :visited).active {
+      color: black;
+    }
+    .btn-gr2 {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 3/5;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr 1fr;
+      padding: 5px;
+      gap: 5px;
+    }
+    .btn-gr1 .fa {
+      background-color: white;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      border: none;
+    }
+    .btn-gr2 .fa {
+      background-color: white;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      border: none;
+    }
+    .save-btns button {
+      width: 40px;
+      height: 30px;
+      padding: 5px;
+      border: none;
+    }
+    .a-btn {
+      text-decoration: none;
+      width: 130px;
+      height: 50px;
+      padding: 5px;
+      cursor: pointer;
+      color: black;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      text-align: center;
+      padding-top: 15px;
+      border-radius: 5px;
+    }
+    .about-img{
+      width: 300px;
+      height: 300px;
+    }
+  
+  }
+  
+  .img-container {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minMax(150px, 150px));
+  }
+  
+  
+  
+  @media (min-width: 820px) {
+    .editors {
+      width: 400px;
+      height: 400px;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(4, 1fr) 50px 1fr;
+      gap: 5px;
+    }
+    .about-img{
+      width: 400px;
+      height: 400px;
+    }
+    .userTxt {
+      grid-column: 1/6;
+      grid-row: 1/2;
+    }
+    .fa-upload {
+      grid-column: 5/6;
+      grid-row: 1/2;
+    }
+    a:is(:link, :active, :visited).active {
+      color: black;
+    }
+    .btn-gr1 {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 2/3;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr;
+      gap: 1px;
+      margin: 0;
+      border-radius: 5px;
+    }
+    .btn-gr2 {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 3/5;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr 1fr;
+      padding: 5px;
+      gap: 5px;
+      border-radius: 5px;
+      border: none;
+    }
+    .fonts-selection {
+      grid-column: 1/4;
+      grid-row: 4/5;
+    }
+    .fa-strikethrough {
+      grid-column: 4/5;
+      grid-row: 4/5;
+    }
+    .palette {
+      grid-column: 5/6;
+      grid-row: 4/5;
+    }
+    .stickers-container {
+      grid-column: 1/6;
+      grid-row: 5/6;
+      padding-left: 30px;
+    }
+    .save-btns {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 6/7;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr;
+      padding: 5px;
+      gap: 5px;
+      border-radius: 5px;
+      border: none;
+    }
+    .btn-gr1 .fa {
+      background-color: white;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      cursor: pointer;
+      width: 50px;
+      height: 50px;
+      border: none;
+      border-radius: 5px;
+    }
+    .btn-gr2 .fa {
+      background-color: white;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      cursor: pointer;
+      width: 50px;
+      height: 50px;
+      border: none;
+      border-radius: 5px;
+    }
+    .save-btns button {
+      width: 100px;
+      height: 30px;
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      margin-top: 30px;
+    }
+    .about-container {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+    .img-container {
+      display: grid;
+      gap: 10px;
+      grid-template-columns: repeat(auto-fill, minMax(150px, 150px));
+    }
+  }
+  
   @media (max-width: 650px) {
+    .img-container {
+      display: grid;
+      gap: 5px;
+      grid-template-columns: repeat(auto-fill, minMax(150px, 150px));
+    }
+    .about-txt {
+      line-height: 10px;
+      padding-bottom: 35px;
+    }
+    a:is(:link, :active, :visited).active {
+      color: black;
+    }
     .main-nav {
       position: fixed;
       top: 75px;
       right: 0;
       height: 50vh;
       flex-direction: column;
-      background-color: orange;
-      width: 100px;
-      transform: translateX(100%);
+      background-color: rgb(255, 166, 0);
+       transform: translateX(100%);
       transition: .5s ease-in-out;
       size: 10px;
     }
@@ -120,10 +362,109 @@
       display: block;
       padding: 10px 16px;
       border-bottom: 1px solid #e0e0e0;
+      cursor: pointer;
     }
     .btn-menu {
       display: block;
     }
+    .editors {
+      width: 300px;
+      height: 300px;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      display: grid;
+      align-items: center;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(4, 1fr) 1fr 1fr;
+      margin-right: 35px;
+      margin-top: 5px;
+      gap: 15px;
+    }
+    .btn-gr1 {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 2/3;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr;
+      /* padding: 5px; */
+    
+    }
+    .btn-gr2 {
+      display: grid;
+      grid-column: 1/6;
+      grid-row: 3/4;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr 1fr;
+      padding: 5px;
+      /* gap: 5px; */
+    }
+    .btn-gr1 .fa {
+      background-color: white;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      border: none;
+    }
+    .btn-gr2 .fa {
+      background-color: white;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      border: none;
+    }
+    .save-btns button {
+      width: 80px;
+      height: 30px;
+      padding: 5px;
+      border: none;
+      margin-top: 30px;
+    }
+    .canvas-container {
+      margin-right: 10px;
+    }
+    .about-container {
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+   
+    .about-txt{
+      line-height: 2px;
+    }
+    .editor-container {
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding-right: 30px;
+    }
+   
+    .control-color-input {
+      width: 25px;
+      height: 10px;
+      border: none;
+    }
+    .a-btn {
+      text-decoration: none;
+      margin-top: 30px;
+      width: 80px;
+      height: 30px;
+      padding: 5px;
+      cursor: pointer;
+      color: black;
+      box-shadow: 5px 5px 16px 0px #948e8e;
+      text-align: center;
+      padding-top: 5px;
+      border-radius: 5px;
+    }
+    .main-layout{
+    margin-right: 10px;
+    }
+    
   }
   
   /* Search-area */
@@ -131,11 +472,13 @@
   .search-sec {
     overflow: hidden;
     background-color: white;
-    display: flex
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .search-sec .fa {
-    color: orange;
+    color: rgb(255, 166, 0);
     height: 20px;
     width: 20px;
     cursor: pointer;
@@ -144,7 +487,21 @@
   .input-bar {
     margin-top: 40px;
     border: none;
-    border-bottom: solid 1px orange;
+    border-bottom: solid 1px rgb(255, 166, 0);
+  }
+  
+  textarea, input {
+    outline: none;
+  }
+  
+  .filter-btn {
+    background-color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .filter-btn:hover {
+    color: rgb(255, 166, 0);
   }
   
   .topnav .search-container button {
@@ -157,25 +514,25 @@
     cursor: pointer;
   }
   
+  .topnav .icon {
+    display: none;
+  }
+  
   .topnav .search-container button:hover {
     background: #ccc;
   }
   
+  .search-box {
+    padding-bottom: 20px;
+  }
+  
   .search-words {
-    background-color: blanchedalmond;
-    /* width: 100%; */
-    display: flex;
+    background-color: white;
   }
   
   /* main container */
   
   /* img container */
-  
-  .img-container {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fill, minMax(150px, 150px));
-  }
   
   .img-container img {
     cursor: pointer;
@@ -184,24 +541,23 @@
   /* editor-container */
   
   .editor-container {
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
   
-  .btn-gr1 .fa {
-    background-color: white;
-    box-shadow: 5px 5px 16px 0px #948e8e;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
+  .control-color-input {
+    width: 35px;
+    height: 20px;
+    border: none;
   }
   
-  .btn-gr2 .fa {
-    background-color: white;
-    box-shadow: 5px 5px 16px 0px #948e8e;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
+  .inputfile, .inputcolor {
+    opacity: 0;
+    overflow: hidden;
+    margin-top: 10px;
+    align-items: center;
   }
   
   .file-input {
@@ -209,12 +565,13 @@
     border: 1px solid;
     box-shadow: 5px 5px 16px 0px #948e8e;
     cursor: pointer;
-    display: none;
+    grid-column: 5/6;
+    grid-row: 1/2;
+  
   }
   
   .editor-container button {
     background-color: white;
-    border: 1px solid;
     box-shadow: 5px 5px 16px 0px #948e8e;
     cursor: pointer;
   }
@@ -224,24 +581,15 @@
     box-shadow: 5px 5px 16px 0px #948e8e;
   }
   
-  .editors {
-    width: 450px;
-    height: 450px;
-    box-shadow: 5px 5px 16px 0px #948e8e;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(4, 1fr) 100px 1fr;
-    gap: 15px;
-  }
-  
   .userTxt {
-    grid-column: 1/5;
+    grid-column: 1/6;
     grid-row: 1/2;
   }
   
   .fa-upload {
     grid-column: 5/6;
     grid-row: 1/2;
+    border: none;
   }
   
   .btn-gr1 {
@@ -251,6 +599,7 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr;
     padding: 5px;
+    border-radius: 5px;
   }
   
   .btn-gr2 {
@@ -258,9 +607,10 @@
     grid-column: 1/6;
     grid-row: 3/5;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 30px;
     padding: 5px;
     gap: 5px;
+    border-radius: 5px;
   }
   
   .fonts-selection {
@@ -271,6 +621,7 @@
   .fa-strikethrough {
     grid-column: 4/5;
     grid-row: 4/5;
+    border: none;
   }
   
   .palette {
@@ -296,13 +647,10 @@
     grid-template-rows: 1fr;
     padding: 5px;
     gap: 5px;
+    border-radius: 2px;
+    border: none;
   }
   
-  .save-btns button {
-    width: 140px;
-    height: 50px;
-    padding: 5px;
-  }
   
   .share-container a {
     text-decoration: none;
@@ -310,17 +658,25 @@
     color: black;
   }
   
-  .a-btn {
-    text-decoration: none;
-    width: 140px;
-    height: 50px;
-    padding: 5px;
-    cursor: pointer;
-    border: black 1px solid;
+  
+  ::placeholder {
     color: black;
-    box-shadow: 5px 5px 16px 0px #948e8e;
     text-align: center;
-    padding-top: 15px;
+  }
+  
+  .userTxt {
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    box-shadow: 5px 5px 16px 0px #948e8e;
+    border: none;
+    border-radius: 2px;
+  }
+  
+  .fonts-selection {
+    box-shadow: 5px 5px 16px 0px #948e8e;
+    border: none;
+    border-radius: 2px;
   }
   
   /* footer */
@@ -333,22 +689,57 @@
     padding-top: 10px;
     width: auto;
     height: 200px;
-    background-color: orange;
+    background-color: rgb(255, 166, 0);
     font-size: 20px;
     text-align: center;
+    margin-bottom: 0px;
   }
   
   /* contact-html */
   
-  .by-socials .fa{
+  .by-socials .fa {
     display: flex;
     align-items: center;
-    width: 50px;
-    height: 50px;
-    
+    width: 70px;
+    height: 70px;
+    justify-content: center;
   }
   
+  .about-container {
+    gap: 20px;
+    margin-left: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
+  .about-me {
+    grid-row: 2/4;
+    grid-column: 4/7;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+  }
+  
+  .about-txt {
+    line-height: 35px;
+    padding-bottom: 35px;
+  }
+  
+  .creator-name {
+    font-weight: bold;
+  }
+  
+  /* saved-meme */
+  
+  .save-meme-container {
+    height: 420px;
+  }
+  
+  .edited-memes{
+    color: black;
+    text-align: center;
+  }
   
   /* HELPERS */
   
@@ -380,6 +771,49 @@
     flex-direction: row-reverse;
   }
   
-  .topnav .icon {
-    display: none;
+  
+  
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  
+  .modal-txt{
+    color: #000;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
